Use a builder pattern and a common interface to specify boolean expressions in filters